added mongo db conection; added operations with book entity; updated swagger api doc
